src/test/ui/mismatched_types/issue-26480.stderr
error[E0308]: mismatched types
  --> $DIR/issue-26480.rs:26:19
   |
26 |                   $arr.len() * size_of($arr[0]));
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected u64, found usize
$DIR/issue-26480.rs:37:5: 37:19 note: in this expansion of write! (defined in $DIR/issue-26480.rs)

error: non-scalar cast: `{integer}` as `()`
  --> $DIR/issue-26480.rs:32:19
   |
32 |     ($x:expr) => ($x as ())
   |                   ^^^^^^^^
$DIR/issue-26480.rs:38:5: 38:14 note: in this expansion of cast! (defined in $DIR/issue-26480.rs)

error: aborting due to 2 previous errors

